Добавила тег range

--- a/inner.html
+++ b/inner.html
@@ -1,205 +1,205 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Нёрдс</title>
-  </head>
-  <body>
-         <header class="main-header">
-            <div class="container">
-              <div class="index-logo">
-                  <a href="#"><img src="50px" width="" height="50px" alt="Дизайн студия Nerds"></a>
-                  </div>
-                <nav class="main-navigation">
-                    <ul>
-                        <li>
-                            <a href=#>Студия</a>
-                        </li>
-                        <li>
-                            <a href=#>Клиенты</a>
-                        </li>
-                        <li>
-                            <a href=#>Магазин</a>
-                        </li>
-                        <li>
-                            <a href=#>Контакты</a>
-                        </li>
-                    </ul>
-                </nav>
-                <div class="user-block">
-                    <a class="bascet" href="#">Корзина</a>
-                </div>
-                    <h1 class="main-title">Магазин готовых шаблонов</h1>
-             </div>
-        </header>
-         <main>
-           <div class="container">
-                <div class="left-panel">
-                    <form action="#" method="post">
-                        <div class="type-of-net">
-                    <h2 class="net-name">Сетка:</h2>
-                    <ul>
-                        <li>
-                            <input type="radio" name="net-type" id="subscribe-field-6">
-                            <label for="subscribe-field-6">Адаптивная</label>
-                        </li>
-                        <li>
-                            <input type="radio" name="net-type" id="subscribe-field-7" checked>
-                            <label for="subscribe-field-7">Фиксированная</label>
-                        </li>
-                        <li>
-                            <input type="checkbox" name="net-type" id="subscribe-field-8">
-                            <label for="subscribe-field-8">Резиновая</label>
-                        </li>
-                    </ul>
-                        </div>
-                <div class="features">
-                    <h2 class="features-name">Особенности:</h2>
-                    <ul>
-                        <li>
-                            <input type="checkbox" name="Slaider" id="subscribe-field">
-                            <label for="subscribe-field">Слайдер</label>
-                        </li>
-                        <li>
-                            <input type="checkbox" name="feature-block" id="subscribe-field-1">
-                            <label for="subscribe-field-1">Блок преимуществ</label>
-                        </li>
-                        <li>
-                            <input type="checkbox" name="News" id="subscribe-field-1">
-                            <label for="subscribe-field-1">Новости</label>
-                        </li>
-                        <li>
-                            <input type="checkbox" name="Gallery" id="subscribe-field-3">
-                            <label for="subscribe-field-3">Галерея</label>
-                        </li>
-                        <li>
-                            <input type="checkbox" name="feature-bascet" id="subscribe-field-4">
-                            <label for="subscribe-field-4">Корзина</label>
-                        </li>
-                    </ul>
-                </div>
-              <button class="show-button">Показать</button>
-        </form>
-                </div>
-               <div class="right-panel">
-                   <div class="sort">
-                       <ul>
-                           <li>
-                               <a href="#">По цене</a>
-                           </li>
-                           <li>
-                               <a href="#">По типу</a>
-                           </li>
-                           <li>
-                               <a href="#">По названию</a>
-                           </li>
-                       </ul>
-                    </div>
-                   <section class="catalog-gallery">
-            <article class="catalog-gallery-item">
-                       <img class="background-image" src="#" height="50px" weidth="50px" alt="Sedona">
-                        <a href="#">
-                            <span>Sedona</span>
-                            <span>Информационный сайт<br>для туристов</span>
-                        </a>
-                        <div class="prise-block">
-                            <button class="price-button">9 900 руб.</button>
-                        </div>
-              </article>
-            <article class="catalog-gallery-item">
-                       <img class="background-image" src="#" height="50px" weidth="50px" alt="Pink">
-                        <a href="#">
-                            <span>Pink</span>
-                            <span></span>
-                        </a>
-                        <div class="prise-block">
-                            <button class="price-button">9 900 руб.</button>
-                        </div>
-              </article>
-                       <article class="catalog-gallery-item">
-                       <img class="background-image" src="#" height="50px" weidth="50px" alt="Borodinski">
-                        <a href="#">
-                            <span>Borodinski</span>
-                            <span></span>
-                        </a>
-                        <div class="prise-block">
-                            <button class="price-button">9 900 руб.</button>
-                        </div>
-              </article>
-                <article class="catalog-gallery-item">
-                       <img class="background-image" src="#" height="50px" weidth="50px" alt="Mishka">
-                        <a href="#">
-                            <span>Mishka</span>
-                            <span></span>
-                        </a>
-                        <div class="prise-block">
-                            <button class="price-button">9 900 руб.</button>
-                        </div>
-              </article>
-                <article class="catalog-gallery-item">
-                       <img class="background-image" src="#" height="50px" weidth="50px" alt="A+">
-                        <a href="#">
-                            <span>A+</span>
-                            <span></span>
-                        </a>
-                        <div class="prise-block">
-                            <button class="price-button">9 900 руб.</button>
-                        </div>
-              </article>
-                <article class="catalog-gallery-item">
-                       <img class="background-image" src="#" height="50px" weidth="50px" alt="Кваст">
-                        <a href="#">
-                            <span>Кваст</span>
-                            <span></span>
-                        </a>
-                        <div class="prise-block">
-                            <button class="price-button">9 900 руб.</button>
-                        </div>
-              </article>   
-        </section>
-                   
-               </div>
-                   <section class="paginations">
-                <ul>
-                    <li>
-                        <span>1</span>
-                    </li>
-                    <li>
-                        <a class="btn" href="#">2</a>
-                    </li>
-                    <li>
-                       <a class="btn" href="#">3</a>
-                    </li>
-                    <li>
-                       <a class="btn" href="#">Седующая</a>
-                    </li>
-                </ul>
-        </section>
-            </div>
-      </main>
-    <footer class="main-footer">
-        <div class="container">
-            <div class="footer-contacts">
-                <b>Nerds Design Studio</b>
-                191186, Санкт-Петербург,<br> 
-                Б. Конюшенная, д. 19.8<br>
-                Тел: +7 (812) 275-75-75<br>
-                <a class="ontact-button" href="#">Напишите нам</a>
-            </div>
-            <div class="footer-logo">
-                  <a href="#"><img src="50px" width="" height="50px" alt="Дизайн студия Nerds"></a>
-                  </div>
-            <div class="footer-social">
-                <span>Давайте дружить, это выгодно!</span>
-                <span>Скидка 10% для друзей из социальных сетей.</span>
-                <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
-                <a class="social-btn social-btn-fb" href="#">Фэйсбук</a>
-                <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
-            </div>
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Нёрдс</title>
+</head>
+<body>
+  <header class="main-header">
+    <div class="container">
+      <div class="index-logo">
+        <a href="#"><img src="50px" width="" height="50px" alt="Дизайн студия Nerds"></a>
+      </div>
+      <nav class="main-navigation">
+        <ul>
+          <li>
+            <a href=#>Студия</a>
+          </li>
+          <li>
+            <a href=#>Клиенты</a>
+          </li>
+          <li>
+            <a href=#>Магазин</a>
+          </li>
+          <li>
+            <a href=#>Контакты</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="user-block">
+        <a class="bascet" href="#">Корзина</a>
+      </div>
+      <h1 class="main-title">Магазин готовых шаблонов</h1>
+    </div>
+  </header>
+  <main>
+    <div class="container">
+      <div class="left-panel">
+        <div class="range">
+          <input type="range" min="0" max="15 000" step="1">
         </div>
-    </footer>
-  </body>
+        <form action="#" method="post">
+          <div class="type-of-net">
+            <h2 class="net-name">Сетка:</h2>
+            <ul>
+              <li>
+                <input type="radio" name="net-type" id="subscribe-field-6">
+                <label for="subscribe-field-6">Адаптивная</label>
+              </li>
+              <li>
+                <input type="radio" name="net-type" id="subscribe-field-7" checked>
+                <label for="subscribe-field-7">Фиксированная</label>
+              </li>
+              <li>
+                <input type="checkbox" name="net-type" id="subscribe-field-8">
+                <label for="subscribe-field-8">Резиновая</label>
+              </li>
+            </ul>
+          </div>
+          <div class="features">
+            <h2 class="features-name">Особенности:</h2>
+            <ul>
+              <li>
+                <input type="checkbox" name="Slaider" id="subscribe-field">
+                <label for="subscribe-field">Слайдер</label>
+              </li>
+              <li>
+                <input type="checkbox" name="feature-block" id="subscribe-field-1">
+                <label for="subscribe-field-1">Блок преимуществ</label>
+              </li>
+              <li>
+                <input type="checkbox" name="News" id="subscribe-field-1">
+                <label for="subscribe-field-1">Новости</label>
+              </li>
+              <li>
+                <input type="checkbox" name="Gallery" id="subscribe-field-3">
+                <label for="subscribe-field-3">Галерея</label>
+              </li>
+              <li>
+                <input type="checkbox" name="feature-bascet" id="subscribe-field-4">
+                <label for="subscribe-field-4">Корзина</label>
+              </li>
+            </ul>
+          </div>
+          <button class="show-button">Показать</button>
+        </form>
+      </div>
+      <div class="right-panel">
+        <div class="sort">
+          <ul>
+            <li>
+              <a href="#">По цене</a>
+            </li>
+            <li>
+              <a href="#">По типу</a>
+            </li>
+            <li>
+              <a href="#">По названию</a>
+            </li>
+          </ul>
+        </div>
+        <section class="catalog-gallery">
+          <article class="catalog-gallery-item">
+            <img class="background-image" src="#" height="50px" weidth="50px" alt="Sedona">
+            <a href="#">
+              <span>Sedona</span>
+              <span>Информационный сайт<br>для туристов</span>
+            </a>
+            <div class="prise-block">
+              <button class="price-button">9 900 руб.</button>
+            </div>
+          </article>
+          <article class="catalog-gallery-item">
+            <img class="background-image" src="#" height="50px" weidth="50px" alt="Pink">
+            <a href="#">
+              <span>Pink</span>
+              <span></span>
+            </a>
+            <div class="prise-block">
+              <button class="price-button">9 900 руб.</button>
+            </div>
+          </article>
+          <article class="catalog-gallery-item">
+            <img class="background-image" src="#" height="50px" weidth="50px" alt="Borodinski">
+            <a href="#">
+              <span>Borodinski</span>
+              <span></span>
+            </a>
+            <div class="prise-block">
+              <button class="price-button">9 900 руб.</button>
+            </div>
+          </article>
+          <article class="catalog-gallery-item">
+            <img class="background-image" src="#" height="50px" weidth="50px" alt="Mishka">
+            <a href="#">
+              <span>Mishka</span>
+              <span></span>
+            </a>
+            <div class="prise-block">
+              <button class="price-button">9 900 руб.</button>
+            </div>
+          </article>
+          <article class="catalog-gallery-item">
+            <img class="background-image" src="#" height="50px" weidth="50px" alt="A+">
+            <a href="#">
+              <span>A+</span>
+              <span></span>
+            </a>
+            <div class="prise-block">
+              <button class="price-button">9 900 руб.</button>
+            </div>
+          </article>
+          <article class="catalog-gallery-item">
+            <img class="background-image" src="#" height="50px" weidth="50px" alt="Кваст">
+            <a href="#">
+              <span>Кваст</span>
+              <span></span>
+            </a>
+            <div class="prise-block">
+              <button class="price-button">9 900 руб.</button>
+            </div>
+          </article>
+        </section>
+
+      </div>
+      <section class="paginations">
+        <ul>
+          <li>
+            <span>1</span>
+          </li>
+          <li>
+            <a class="btn" href="#">2</a>
+          </li>
+          <li>
+            <a class="btn" href="#">3</a>
+          </li>
+          <li>
+            <a class="btn" href="#">Седующая</a>
+          </li>
+        </ul>
+      </section>
+    </div>
+  </main>
+  <footer class="main-footer">
+    <div class="container">
+      <div class="footer-contacts">
+        <b>Nerds Design Studio</b>
+        191186, Санкт-Петербург,<br>
+        Б. Конюшенная, д. 19.8<br>
+        Тел: +7 (812) 275-75-75<br>
+        <a class="ontact-button" href="#">Напишите нам</a>
+      </div>
+      <div class="footer-logo">
+        <a href="#"><img src="50px" width="" height="50px" alt="Дизайн студия Nerds"></a>
+      </div>
+      <div class="footer-social">
+        <span>Давайте дружить, это выгодно!</span>
+        <span>Скидка 10% для друзей из социальных сетей.</span>
+        <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
+        <a class="social-btn social-btn-fb" href="#">Фэйсбук</a>
+        <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+      </div>
+    </div>
+  </footer>
+</body>
 </html>
-
-
- 
