--- a/index.html
+++ b/index.html
@@ -34,33 +34,41 @@
         <span>Математически выверенный дизайн для вашего сайта или мобильного приложения.</span>
         <a class="info-btn" href="#">Узнать больше</a>
       </div>
-      <div class="right-side-header">
-        <img src="#" height="100px" width="100px">
+      <div class="slider" name="slider">
+        <input type="radio" name="slide1" id="slide1">
+        <label for="slide1"><img src="#" height="60px" width="30px"></label>
+
+        <input type="radio" name="slide1" id="slide2">
+        <label for="slide2"><img src="#" height="60px" width="30px"></label>
+
+        <input type="radio" name="slide1" id="slide3">
+        <label for="slide3"><img src="#" height="60px" width="30px"></label>
       </div>
-    </div>
-  </header>
-  <main>
-    <div class="container">
-      <section class="main-menu">
-        <div class="web-cites">
-          <img src="#" height="20px" width="40px" alt="Веб-сайты">
-          <b>Веб-сайты</b>
-          <p>Мир никогда не будет прежним<br> после того как увидит ваш сайт!</p>
-          <a class="web-cite-btn" href="# ">Заказать</a>
-        </div>
-        <div class="apps">
-          <img src="#" height="20px" width="40px" alt="Приложения">
-          <b>Приложения</b>
-          <p>Покорите топ-10 приложений в<br> AppStore и GooglePlay</p>
-          <a class="apps-btn" href="# ">Заказать</a>
-        </div>
-        <div class="apps">
-          <img src="#" height="20px" width="40px" alt="Презентации">
-          <b>Презентации</b>
-          <p>Вы даже не подозреваете,<br> насколько вы изумительрны!</p>
-          <a class="presentation-btn" href="# ">Заказать</a>
-        </div>
-      </section>
+  </div>
+</header>
+<main>
+  <div class="container">
+    <section class="products">
+      <div class="product">
+        <img src="#" height="20px" width="40px" alt="Веб-сайты">
+        <b>Веб-сайты</b>
+        <p>Мир никогда не будет прежним<br> после того как увидит ваш сайт!</p>
+        <a class="web-cite-btn" href="# ">Заказать</a>
+      </div>
+      <div class="product">
+        <img src="#" height="20px" width="40px" alt="Приложения">
+        <b>Приложения</b>
+        <p>Покорите топ-10 приложений в<br> AppStore и GooglePlay</p>
+        <a class="apps-btn" href="# ">Заказать</a>
+      </div>
+      <div class="product">
+        <img src="#" height="20px" width="40px" alt="Презентации">
+        <b>Презентации</b>
+        <p>Вы даже не подозреваете,<br> насколько вы изумительрны!</p>
+        <a class="presentation-btn" href="# ">Заказать</a>
+      </div>
+    </section>
+    <section class="content">
       <div class="left-side">
         <h2 class="second-title">Мы-маленькая, но гордая дизайн-студия из Краснодара.</h2>
         <p>
@@ -76,39 +84,62 @@
       <div class="right-side">
         <img class="logo-img" src="#" height="50px" width="50px">
         <span>С 2004 года мы любим точность во всем:</span>
-        <div class="commitment">
+        <div class="features">
           <span class="procents">146%</span>
           <span class="description">Уровень самоотдачи</span>
         </div>
-        <div class="terms">
+        <div class="features">
           <span class="procents">100%</span>
           <span class="description">Соблюдение сроков</span>
         </div>
-        <div class="prepayment">
+        <div class="features">
           <span class="procents">50%</span>
           <span class="description">Минимальная предоплата</span>
         </div>
       </div>
+    </section>
+    <div class="partners">
+      <img src="#" height="40px" width="40px" alt="HTML Academy">
+      <img src="#" height="40px" width="40px" alt="Borodinski">
+      <img src="#" height="40px" width="40px" alt="Pink">
+      <img src="#" height="40px" width="40px" alt="Mishka">
     </div>
-  </main>
+  </div>
+</main>
+<section class="map">
+  <div class="footer-contacts">
+    <b>Nerds Design Studio</b>
+    191186, Санкт-Петербург,<br>
+    Б. Конюшенная, д. 19.8<br>
+    Тел: +7 (812) 275-75-75<br>
+
+    <label for="modal-1" class="contact-button">
+      <a class="contact-button" href="#">Напишите нам</a>
+    </label>
+    <div class="modal">
+      <input class="modal-open" id="modal-1" type="checkbox" hidden>
+      <div class="modal-wrap" aria-hidden="true" role="dialog">
+        <label class="modal-overlay" for="modal-1"></label>
+        <div class="modal-dialog">
+          <div class="modal-header">
+            <label class="btn-close" for="modal-1" aria-hidden="true">×</label>
+          </div>
+          <div class="modal-body">
+            <textarea placeholder="Ваше сообщение" rows="5"></textarea>
+          </div>
+          <div class="modal-footer">
+            <label class="btn btn-primary" for="modal-1">Напишите нам</label>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="footer-logo">
+      <a href="#"><img src="50px" width="" height="50px" alt="Дизайн студия Nerds"></a>
+    </div>
+  </section>
   <footer class="main-footer">
     <div class="container">
-      <div class="partners">
-        <img src="#" height="40px" width="40px" alt="HTML Academy">
-        <img src="#" height="40px" width="40px" alt="Borodinski">
-        <img src="#" height="40px" width="40px" alt="Pink">
-        <img src="#" height="40px" width="40px" alt="Mishka">
-      </div>
-      <div class="footer-contacts">
-        <b>Nerds Design Studio</b>
-        191186, Санкт-Петербург,<br>
-        Б. Конюшенная, д. 19.8<br>
-        Тел: +7 (812) 275-75-75<br>
-        <a class="ontact-button" href="#">Напишите нам</a>
-      </div>
-      <div class="footer-logo">
-        <a href="#"><img src="50px" width="" height="50px" alt="Дизайн студия Nerds"></a>
-      </div>
       <div class="footer-social">
         <span>Давайте дружить, это выгодно!</span>
         <span>Скидка 10% для друзей из социальных сетей.</span>
