Исправила имя и пагинацию

--- a/catalog.html
+++ b/catalog.html
@@ -167,24 +167,25 @@
 
           </article>
         </section>
+        <section class="paginations">
+          <ul>
+            <li>
+              <span class="btn btn-disabled">1</span>
+            </li>
+            <li>
+              <a class="btn btn-big" href="#">2</a>
+            </li>
+            <li>
+              <a class="btn btn-big" href="#">3</a>
+            </li>
+            <li>
+              <a class="btn btn-big" href="#">Седующая</a>
+            </li>
+          </ul>
+        </section>
 
       </div>
-      <section class="paginations">
-        <ul>
-          <li>
-            <span class=”btn btn-disabled”>1</span>
-          </li>
-          <li>
-            <a class="btn btn-big" href="#">2</a>
-          </li>
-          <li>
-            <a class="btn btn-big" href="#">3</a>
-          </li>
-          <li>
-            <a class="btn btn-big" href="#">Седующая</a>
-          </li>
-        </ul>
-      </section>
+
     </div>
   </main>
   <section class="map">
