--- a/catalog.html
+++ b/catalog.html
@@ -189,45 +189,33 @@
     </div>
   </main>
   <section class="map">
-    <div class="footer-contacts">
-      <b>Nerds Design Studio</b>
-      191186, Санкт-Петербург,<br>
-      Б. Конюшенная, д. 19.8<br>
-      Тел: +7 (812) 275-75-75<br>
-
-      <label for="modal-1" class="contact-button">
-        <a class="contact-button" href="#">Напишите нам</a>
-      </label>
-      <div class="modal">
-        <input class="modal-open" id="modal-1" type="checkbox" hidden>
-        <div class="modal-wrap" aria-hidden="true" role="dialog">
-          <label class="modal-overlay" for="modal-1"></label>
-          <div class="modal-dialog">
-            <div class="modal-header">
-              <label class="btn-close" for="modal-1" aria-hidden="true">×</label>
-            </div>
-            <div class="modal-body">
-              <textarea placeholder="Ваше сообщение" rows="5"></textarea>
-            </div>
-            <div class="modal-footer">
-              <label class="btn btn-primary" for="modal-1">Напишите нам</label>
-            </div>
-          </div>
+    <div class="contacts">
+      <div class="contacts-infotmation">
+        <b>Nerds Design Studio</b>
+        191186, Санкт-Петербург,<br>
+        Б. Конюшенная, д. 19.8<br>
+        Тел: +7 (812) 275-75-75<br>
+      </div>
+      <a class="contact-button" href="#">Напишите нам</a>
+      <div class="modal-block">
+        <form action="#" method="post">
+          <h3 class="modal-title">Напишите нам<h3>
+            <input type="textarea" class="modal">
+            <button>Отправить</button>
+          </form>
         </div>
-      </div>
-
-      <div class="footer-logo">
-        <a href="#"><img src="50px" width="" height="50px" alt="Дизайн студия Nerds"></a>
-      </div>
-    </section>
-    <footer class="main-footer">
-      <div class="container">
-        <div class="footer-social">
-          <span>Давайте дружить, это выгодно!</span>
-          <span>Скидка 10% для друзей из социальных сетей.</span>
-          <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
-          <a class="social-btn social-btn-fb" href="#">Фэйсбук</a>
-          <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+      </section>
+      <footer class="main-footer">
+        <div class="container">
+          <div class="footer-information">
+            <span>Давайте дружить, это выгодно!</span>
+            <span>Скидка 10% для друзей из социальных сетей.</span>
+          </div>
+          <div class="social-button">
+            <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
+            <a class="social-btn social-btn-fb" href="#">Фэйсбук</a>
+            <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+          </div>
         </div>
       </div>
     </footer>
