--- a/index.html
+++ b/index.html
@@ -29,125 +29,135 @@
       <div class="user-block">
         <a class="basket" href="#">Корзина</a>
       </div>
-      <div class="left-side-header">
-        <h1 class="title">Долго, дорого, скурпулезно.</h1>
-        <span>Математически выверенный дизайн для вашего сайта или мобильного приложения.</span>
-        <a class="info-btn" href="#">Узнать больше</a>
-      </div>
-      <div class="slider" name="slider">
-        <input type="radio" name="slide1" id="slide1">
-        <label for="slide1"><img src="#" height="60px" width="30px"></label>
-
-        <input type="radio" name="slide1" id="slide2">
-        <label for="slide2"><img src="#" height="60px" width="30px"></label>
-
-        <input type="radio" name="slide1" id="slide3">
-        <label for="slide3"><img src="#" height="60px" width="30px"></label>
-      </div>
-  </div>
-</header>
-<main>
-  <div class="container">
-    <section class="products">
-      <div class="product">
-        <img src="#" height="20px" width="40px" alt="Веб-сайты">
-        <b>Веб-сайты</b>
-        <p>Мир никогда не будет прежним<br> после того как увидит ваш сайт!</p>
-        <a class="web-cite-btn" href="# ">Заказать</a>
-      </div>
-      <div class="product">
-        <img src="#" height="20px" width="40px" alt="Приложения">
-        <b>Приложения</b>
-        <p>Покорите топ-10 приложений в<br> AppStore и GooglePlay</p>
-        <a class="apps-btn" href="# ">Заказать</a>
-      </div>
-      <div class="product">
-        <img src="#" height="20px" width="40px" alt="Презентации">
-        <b>Презентации</b>
-        <p>Вы даже не подозреваете,<br> насколько вы изумительрны!</p>
-        <a class="presentation-btn" href="# ">Заказать</a>
-      </div>
-    </section>
-    <section class="content">
-      <div class="left-side">
-        <h2 class="second-title">Мы-маленькая, но гордая дизайн-студия из Краснодара.</h2>
-        <p>
-          Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креативаю Работаем не покладая рук, как роботы.
-        </p>
-        <b class="small-title">Выполняем заказы на разработку:</b>
-        <ul>
-          <li>Веб-сайтов любой сложности</li>
-          <li>обильных приложений для iOS и Android</li>
-          <li>Слайдшоу и видео для корпоративных презентаций</li>
-        </ul>
-      </div>
-      <div class="right-side">
-        <img class="logo-img" src="#" height="50px" width="50px">
-        <span>С 2004 года мы любим точность во всем:</span>
-        <div class="features">
-          <span class="procents">146%</span>
-          <span class="description">Уровень самоотдачи</span>
-        </div>
-        <div class="features">
-          <span class="procents">100%</span>
-          <span class="description">Соблюдение сроков</span>
-        </div>
-        <div class="features">
-          <span class="procents">50%</span>
-          <span class="description">Минимальная предоплата</span>
-        </div>
-      </div>
-    </section>
-    <div class="partners">
-      <img src="#" height="40px" width="40px" alt="HTML Academy">
-      <img src="#" height="40px" width="40px" alt="Borodinski">
-      <img src="#" height="40px" width="40px" alt="Pink">
-      <img src="#" height="40px" width="40px" alt="Mishka">
-    </div>
-  </div>
-</main>
-<section class="map">
-  <div class="footer-contacts">
-    <b>Nerds Design Studio</b>
-    191186, Санкт-Петербург,<br>
-    Б. Конюшенная, д. 19.8<br>
-    Тел: +7 (812) 275-75-75<br>
-
-    <label for="modal-1" class="contact-button">
-      <a class="contact-button" href="#">Напишите нам</a>
-    </label>
-    <div class="modal">
-      <input class="modal-open" id="modal-1" type="checkbox" hidden>
-      <div class="modal-wrap" aria-hidden="true" role="dialog">
-        <label class="modal-overlay" for="modal-1"></label>
-        <div class="modal-dialog">
-          <div class="modal-header">
-            <label class="btn-close" for="modal-1" aria-hidden="true">×</label>
+      <div class="slider">
+        <div class="item">
+          <div class="left-side">
+            <h2 class="title">Долго, дорого, скурпулезно</h2>
+            <span>Математически выверенный дизайн для вашего сайта или мобильного приложения.</span>
+            <a class="info-btn" href="#">Узнать больше</a>
           </div>
-          <div class="modal-body">
-            <textarea placeholder="Ваше сообщение" rows="5"></textarea>
+          <div class="right-side-mobile">
+            <img src="#" height="60px" width="30px">
           </div>
-          <div class="modal-footer">
-            <label class="btn btn-primary" for="modal-1">Напишите нам</label>
+        </div>
+        <div class="item">
+          <div class="left-side">
+            <h2 class="title">Любим математику как никто другой</h2>
+            <span>Никакого креатива, только математические формулы для расчета идеальных пропорций</span>
+            <a class="info-btn" href="#">Узнать больше</a>
           </div>
+          <div class="right-side-desctops">
+            <img src="#" height="60px" width="30px">
+          </div>
+        </div>
+        <div class="item">
+          <div class="left-side">
+            <h2 class="title">Только ночь, только хардкор</h2>
+            <span>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</span>
+            <a class="info-btn" href="#">Узнать больше</a>
+          </div>
+          <div class="right-side-touchpad">
+            <img src="#" height="60px" width="30px">
+          </div>
+        </div>
+        <div class="slider-navigate">
+          <button class="slider-nav"></button>
+          <button class="slider-nav"></button>
+          <button class="slider-nav"></button>
         </div>
       </div>
     </div>
-
-    <div class="footer-logo">
-      <a href="#"><img src="50px" width="" height="50px" alt="Дизайн студия Nerds"></a>
-    </div>
-  </section>
-  <footer class="main-footer">
+  </header>
+  <main>
     <div class="container">
-      <div class="footer-social">
-        <span>Давайте дружить, это выгодно!</span>
-        <span>Скидка 10% для друзей из социальных сетей.</span>
-        <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
-        <a class="social-btn social-btn-fb" href="#">Фэйсбук</a>
-        <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+      <section class="products">
+        <div class="product">
+          <img src="#" height="20px" width="40px" alt="Веб-сайты">
+          <b>Веб-сайты</b>
+          <p>Мир никогда не будет прежним<br> после того как увидит ваш сайт!</p>
+          <a class="web-cite-btn" href="# ">Заказать</a>
+        </div>
+        <div class="product">
+          <img src="#" height="20px" width="40px" alt="Приложения">
+          <b>Приложения</b>
+          <p>Покорите топ-10 приложений в<br> AppStore и GooglePlay</p>
+          <a class="apps-btn" href="# ">Заказать</a>
+        </div>
+        <div class="product">
+          <img src="#" height="20px" width="40px" alt="Презентации">
+          <b>Презентации</b>
+          <p>Вы даже не подозреваете,<br> насколько вы изумительрны!</p>
+          <a class="presentation-btn" href="# ">Заказать</a>
+        </div>
+      </section>
+      <section class="content">
+        <div class="left-side">
+          <h2 class="second-title">Мы-маленькая, но гордая дизайн-студия из Краснодара.</h2>
+          <p>
+            Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креативаю Работаем не покладая рук, как роботы.
+          </p>
+          <b class="small-title">Выполняем заказы на разработку:</b>
+          <ul>
+            <li>Веб-сайтов любой сложности</li>
+            <li>обильных приложений для iOS и Android</li>
+            <li>Слайдшоу и видео для корпоративных презентаций</li>
+          </ul>
+        </div>
+        <div class="right-side">
+          <img class="logo-img" src="#" height="50px" width="50px">
+          <span>С 2004 года мы любим точность во всем:</span>
+          <div class="features">
+            <span class="procents">146%</span>
+            <span class="description">Уровень самоотдачи</span>
+          </div>
+          <div class="features">
+            <span class="procents">100%</span>
+            <span class="description">Соблюдение сроков</span>
+          </div>
+          <div class="features">
+            <span class="procents">50%</span>
+            <span class="description">Минимальная предоплата</span>
+          </div>
+        </div>
+      </section>
+      <div class="partners">
+        <img src="#" height="40px" width="40px" alt="HTML Academy">
+        <img src="#" height="40px" width="40px" alt="Borodinski">
+        <img src="#" height="40px" width="40px" alt="Pink">
+        <img src="#" height="40px" width="40px" alt="Mishka">
       </div>
     </div>
-  </footer>
-</body>
-</html>
+  </main>
+  <section class="map">
+    <div class="contacts">
+      <div class="contacts-infotmation">
+        <b>Nerds Design Studio</b>
+        191186, Санкт-Петербург,<br>
+        Б. Конюшенная, д. 19.8<br>
+        Тел: +7 (812) 275-75-75<br>
+      </div>
+      <a class="contact-button" href="#">Напишите нам</a>
+      <div class="modal-block">
+        <form action="#" method="post">
+          <h3 class="modal-title">Напишите нам<h3>
+            <input type="textarea" class="modal">
+            <button>Отправить</button>
+          </form>
+        </div>
+      </section>
+      <footer class="main-footer">
+        <div class="container">
+          <div class="footer-information">
+            <span>Давайте дружить, это выгодно!</span>
+            <span>Скидка 10% для друзей из социальных сетей.</span>
+          </div>
+          <div class="social-button">
+            <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
+            <a class="social-btn social-btn-fb" href="#">Фэйсбук</a>
+            <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+          </div>
+        </div>
+      </div>
+    </footer>
+  </body>
+  </html>
